# unused

./: .gitignore  .travis.yml  Dockerfile  LICENSE  NEWS  Portfile  README.md  stack.yaml  unused.cabal
.circleci/: config.yml
app/: App.hs  Main.hs  Types.hs
data/: config.yml
src/: Common.hs
src/Unused/: Aliases.hs  CLI.hs  Cache.hs  DirectoryGrouping.hs  GitContext.hs  Grouping.hs  LikelihoodCalculator.hs  Parser.hs  Projection.hs  Regex.hs  ResponseFilter.hs  ResultsClassifier.hs  TagsSource.hs  TermSearch.hs  Types.hs  Util.hs
src/Unused/CLI/: GitContext.hs  MissingTagsFileError.hs  ProgressBar.hs  ProgressIndicator.hs  Search.hs  SearchError.hs  SearchResult.hs  SearchWithProgress.hs  SearchWithoutProgress.hs  Spinner.hs  Util.hs  Views.hs
src/Unused/CLI/ProgressIndicator/: Internal.hs  Types.hs
src/Unused/CLI/SearchResult/: ColumnFormatter.hs
src/Unused/CLI/Views/: AnalysisHeader.hs  Error.hs  FingerprintError.hs  GitSHAsHeader.hs  InvalidConfigError.hs  MissingTagsFileError.hs  NoResultsFound.hs  SearchResult.hs
src/Unused/CLI/Views/SearchResult/: ColumnFormatter.hs  Internal.hs  ListResult.hs  TableResult.hs  Types.hs
src/Unused/Cache/: DirectoryFingerprint.hs  FindArgsFromIgnoredPaths.hs
src/Unused/Grouping/: Internal.hs  Types.hs
src/Unused/Parser/: Internal.hs
src/Unused/Projection/: Transform.hs
src/Unused/ResultsClassifier/: Config.hs  Types.hs
src/Unused/TermSearch/: Internal.hs  Types.hs
test/Unused/: AliasesSpec.hs  LikelihoodCalculatorSpec.hs  ParserSpec.hs  ProjectionSpec.hs  ResponseFilterSpec.hs  TypesSpec.hs  UtilSpec.hs
test/Unused/Cache/: FindArgsFromIgnoredPathsSpec.hs
test/Unused/Grouping/: InternalSpec.hs
test/Unused/Parser/: InternalSpec.hs
test/Unused/TermSearch/: InternalSpec.hs
