name:                unused
version:             0.1.1.0
synopsis:            A command line tool to identify unused code.
description:         Please see README.md
homepage:            https://github.com/joshuaclayton/unused#readme
license:             MIT
license-file:        LICENSE
author:              Josh Clayton
maintainer:          sayhi@joshuaclayton.me
copyright:           2016 Josh Clayton
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Unused.TermSearch
                     , Unused.TermSearch.Internal
                     , Unused.Parser
                     , Unused.Parser.Internal
                     , Unused.Types
                     , Unused.Util
                     , Unused.Regex
                     , Unused.ResponseFilter
                     , Unused.Grouping
                     , Unused.Grouping.Internal
                     , Unused.Grouping.Types
                     , Unused.LikelihoodCalculator
                     , Unused.Cache
                     , Unused.Cache.DirectoryFingerprint
                     , Unused.CLI
                     , Unused.CLI.Search
                     , Unused.CLI.SearchError
                     , Unused.CLI.SearchResult
                     , Unused.CLI.SearchResult.ColumnFormatter
                     , Unused.CLI.Util
                     , Unused.CLI.ProgressIndicator
                     , Unused.CLI.ProgressIndicator.Internal
                     , Unused.CLI.ProgressIndicator.Types
  build-depends:       base >= 4.7 && < 5
                     , process
                     , parsec
                     , containers
                     , filepath
                     , directory
                     , regex-tdfa
                     , terminal-progress-bar
                     , ansi-terminal
                     , unix
                     , parallel-io
  ghc-options:         -Wall -Werror -O2
  default-language:    Haskell2010

executable unused
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -O2
  build-depends:       base
                     , unused
                     , optparse-applicative
  default-language:    Haskell2010

test-suite unused-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , unused
                     , hspec
                     , containers
  other-modules:       Unused.ParserSpec
                     , Unused.Parser.InternalSpec
                     , Unused.ResponseFilterSpec
                     , Unused.TypesSpec
                     , Unused.LikelihoodCalculatorSpec
                     , Unused.Grouping.InternalSpec
                     , Unused.TermSearch.InternalSpec
                     , Unused.UtilSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/joshuaclayton/unused
